# ctypes-demo

./: README.md  main.py
modules/: add_two_numbers.cpp  add_two_numbers.py  array_operations.py  cmake_operations.py  number_operations.py  numerical_operations.py  string_operations.py
modules/array_operations/: array_operations.cpp  array_operations.h
modules/cmake_operations/: CMakeLists.txt  main.cpp  main.hpp
modules/cmake_operations/print_vector/: CMakeLists.txt  print_vector.cpp  print_vector.hpp
modules/number_operations/: number_operations.cpp  number_operations.h
modules/numerical_operations/: numerical_operations.cpp  numerical_operations.h
modules/string_operations/: string_operations.cpp  string_operations.h
test/: tutorial.cpp  tutorial.py
